--- a/zcgl/build.gradle
+++ b/zcgl/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:cardview-v7:24.0.0-beta1'
 }
