--- a/zcgl/src/main/AndroidManifest.xml
+++ b/zcgl/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
                   android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".login.LoginActivity"
                   android:screenOrientation="portrait"/>
+        <activity android:name=".zcdj.ZcdjActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
