--- a/databinding/build.gradle
+++ b/databinding/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.1.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.1.0'
-    compile 'com.facebook.fresco:fresco:0.9.0+'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
