--- a/zcgl/build.gradle
+++ b/zcgl/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:cardview-v7:24.0.0-beta1'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    kapt "com.android.databinding:compiler:2.2.0"
 }
+
 repositories {
     mavenCentral()
 }
