--- a/gdzc/src/main/AndroidManifest.xml
+++ b/gdzc/src/main/AndroidManifest.xml
@@ -24,11 +24,18 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".zcdj.view.ZcdjActivity"
                   android:screenOrientation="portrait"
-                  android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
+                  android:theme="@style/AppTheme.AppComEdit"
+                  android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
         <activity android:name=".flh.view.FlhActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
-                  android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"/>
+                  android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
+        <activity android:name=".lydw.view.LydwActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.AppComEdit"/>
+        <activity android:name=".syfx.view.SyfxActivity"
+                  android:screenOrientation="portrait"
+                  android:theme="@style/AppTheme.AppComEdit"/>
     </application>
 
 </manifest>
