--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.0.0-beta1'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
     compile project(':pulltofresh')
+    compile project(':pickerview')
 }
