--- a/gdzc/src/main/AndroidManifest.xml
+++ b/gdzc/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".base.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -37,11 +37,7 @@
         <activity android:name=".syfx.view.SyfxActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"/>
-        <activity android:name=".zcbg.view.ZcbgActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme.AppComEdit"
-                  android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".zcbg.view.ZcgbEditActivity"
+        <activity android:name=".zcdj.view.ZcdjEditActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
