--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:cardview-v7:24.0.0-beta1'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
+    compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
     compile project(':pulltofresh')
     compile project(':pickerview')
     compile project(':magicindicator')
