--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.0.0-beta1'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     compile project(':pulltofresh')
     compile project(':pickerview')
     compile project(':magicindicator')
