--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:cardview-v7:24.0.0-beta1'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
