--- a/gdzc/src/main/AndroidManifest.xml
+++ b/gdzc/src/main/AndroidManifest.xml
@@ -23,29 +23,26 @@
                   android:screenOrientation="portrait"/>
         <activity android:name=".main.view.MainActivity"
                   android:screenOrientation="portrait"/>
-        <activity android:name=".zcdj.view.ZcdjActivity"
+        <activity android:name=".zcdj.zcdj.view.ZcdjActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".flh.view.FlhActivity"
+        <activity android:name=".zcdj.flh.view.FlhActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".lydw.view.LydwActivity"
+        <activity android:name=".zcdj.mk.view.MKActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"/>
-        <activity android:name=".syfx.view.SyfxActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme.AppComEdit"/>
-        <activity android:name=".zcdj.view.ZcdjEditActivity"
+        <activity android:name=".zcdj.zcdj.view.ZcdjEditActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".zcdj.view.ZcdjCchActivity"
+        <activity android:name=".zcdj.zcdj.view.ZcdjCchActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".zcdj.view.ZcdjCchEditActivity"
+        <activity android:name=".zcdj.zcdj.view.ZcdjCchEditActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
@@ -58,14 +55,6 @@
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
         <activity android:name=".zccx.view.ZccxDetailActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme.AppComEdit"
-                  android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".cfd.view.CfdActivity"
-                  android:screenOrientation="portrait"
-                  android:theme="@style/AppTheme.AppComEdit"
-                  android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
-        <activity android:name=".ry.view.RyActivity"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.AppComEdit"
                   android:windowSoftInputMode="stateHidden|adjustUnspecified"/>
