--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath 'me.tatarka:gradle-retrolambda:3.3.0'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,6 +27,10 @@ task clean(type: Delete) {
 ext {
     minSdkVersion = 15
     targetSdkVersion = 23
-    compileSdkVersion = 23
-    buildToolsVersion = '23.0.3'
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.2'
+    supportLibVersion = "25.2.0"
+    retrofitLibVersion = "2.1.0"
+    okhttpLibVersion = "3.4.2"
+    daggerLibVersion = "2.7"
 }
