--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -29,9 +30,6 @@ android {
     retrolambda {
         javaVersion JavaVersion.VERSION_1_7
     }
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
 }
 
 dependencies {
@@ -40,20 +38,28 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    //support
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:support-v4:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    //dagger2
+    apt "com.google.dagger:dagger-compiler:$daggerLibVersion"
+    compile "com.google.dagger:dagger:$daggerLibVersion"
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    apt 'com.android.databinding:compiler:1.0-rc5'
+    //retrofit
+    compile "com.squareup.retrofit2:retrofit:$retrofitLibVersion"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitLibVersion"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitLibVersion"
+    compile "com.squareup.okhttp3:logging-interceptor:$okhttpLibVersion"
+
     compile 'com.mcxiaoke.viewpagerindicator:library:2.4.1'
-    compile 'com.android.support:design:23.4.0'
-    compile project(':databinding')
-    compile 'com.squareup.retrofit2:retrofit:2.0.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.android.support:cardview-v7:24.0.0-beta1'
+    compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile project(':databinding')
     compile project(':pulltofresh')
     compile project(':pickerview')
     compile project(':magicindicator')
