--- a/pickerview/build.gradle
+++ b/pickerview/build.gradle
@@ -4,7 +4,7 @@ version = "2.0.8"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 15
