--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -30,6 +30,10 @@ android {
     retrolambda {
         javaVersion JavaVersion.VERSION_1_7
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -42,6 +46,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:support-v4:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:cardview-v7:$supportLibVersion"
     //dagger2
     apt "com.google.dagger:dagger-compiler:$daggerLibVersion"
     compile "com.google.dagger:dagger:$daggerLibVersion"
@@ -51,13 +56,24 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:$retrofitLibVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitLibVersion"
     compile "com.squareup.retrofit2:adapter-rxjava:$retrofitLibVersion"
+    // rxjava
+    compile 'io.reactivex:rxjava:1.1.9'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.trello:rxlifecycle:1.0'
+    compile 'com.trello:rxlifecycle-components:1.0'
 
     compile 'com.mcxiaoke.viewpagerindicator:library:2.4.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    // TagLayout
+    compile 'com.github.Rukey7:TagLayout:1.0.3'
+    // logger
+    compile 'com.orhanobut:logger:1.15'
+    // circleimageview
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile project(':databinding')
     compile project(':pulltofresh')
     compile project(':pickerview')
