--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: 'config.gradle'
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,14 +23,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-ext {
-    minSdkVersion = 15
-    targetSdkVersion = 23
-    compileSdkVersion = 25
-    buildToolsVersion = '25.0.2'
-    supportLibVersion = "25.2.0"
-    retrofitLibVersion = "2.1.0"
-    okhttpLibVersion = "3.4.2"
-    daggerLibVersion = "2.7"
 }
