--- a/gdzc/build.gradle
+++ b/gdzc/build.gradle
@@ -1,17 +1,19 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
+
+def config = rootProject.ext.android//配置
+def lib = rootProject.ext.dependencies//依赖
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion config.compileSdkVersion
+    buildToolsVersion config.buildToolsVersion
     dataBinding {
         enabled true
     }
     defaultConfig {
-        applicationId "com.bjprd.zcgl"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        applicationId "com.gdzc"
+        minSdkVersion config.minSdkVersion
+        targetSdkVersion config.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,61 +24,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-//指定将源码编译的级别，以下会将代码编译到1.7的自己码格式
     retrolambda {
         javaVersion JavaVersion.VERSION_1_7
-    }
-
-    configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    //support
-    compile "com.android.support:appcompat-v7:$supportLibVersion"
-    compile "com.android.support:support-v4:$supportLibVersion"
-    compile "com.android.support:design:$supportLibVersion"
-    compile "com.android.support:cardview-v7:$supportLibVersion"
-    //dagger2
-    apt "com.google.dagger:dagger-compiler:$daggerLibVersion"
-    compile "com.google.dagger:dagger:$daggerLibVersion"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    apt 'com.android.databinding:compiler:1.0-rc5'
-    //retrofit
-    compile "com.squareup.retrofit2:retrofit:$retrofitLibVersion"
-    compile "com.squareup.retrofit2:converter-gson:$retrofitLibVersion"
-    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitLibVersion"
-    // rxjava
-    compile 'io.reactivex:rxjava:1.1.9'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-    compile 'com.trello:rxlifecycle:1.0'
-    compile 'com.trello:rxlifecycle-components:1.0'
-
-    compile 'com.mcxiaoke.viewpagerindicator:library:2.4.1'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
-    compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-    // TagLayout
-    compile 'com.github.Rukey7:TagLayout:1.0.3'
-    // logger
-    compile 'com.orhanobut:logger:1.15'
-    // circleimageview
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'cn.yipianfengye.android:zxing-library:1.5'
-    compile project(':databinding')
+    compile project(':baselib')
     compile project(':pulltofresh')
     compile project(':pickerview')
     compile project(':magicindicator')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile 'com.yanzhenjie:recyclerview-swipe:1.0.2'
+    compile 'cn.yipianfengye.android:zxing-library:1.5'
 }
